--- a/partials/query.editor.html
+++ b/partials/query.editor.html
@@ -1,205 +1,192 @@
 <query-editor-row query-ctrl="ctrl" can-collapse="false">
-  <div class="tight-form">
-    <ul class="tight-form-list">
-      <li class="tight-form-item">Metric</li>
-      <li>
-        <input type="text" class="input-large tight-form-input"
+  <div class="gf-form-inline">
+    <div class="gf-form">
+      <label class="gf-form-label query-keyword width-9"> METRIC </label>
+      <input type="text" class="gf-form-input"
         ng-model="ctrl.target.metric"
         spellcheck="false"
         bs-typeahead="ctrl.suggestMetrics"
         placeholder="metric name"
         data-min-length=0 data-items=100
-        ng-blur="ctrl.targetBlur()">
-        <a bs-tooltip="ctrl.target.errors.metric"
-          style="color: rgb(229, 189, 28)"
-          ng-show="ctrl.target.errors.metric">
-          <i class="fa fa-warning"></i>
-        </a>
-      </li>
-      <li class="tight-form-item">
-        Alias
-      </li>
-      <li>
-        <input type="text" class="input-medium tight-form-input" ng-model="ctrl.target.alias"
-        spellcheck='false' placeholder="alias" ng-blur="ctrl.targetBlur()">
-      </li>
-      <li  class="tight-form-item">
+        ng-blur="ctrl.targetBlur()"> </input>
+      <a bs-tooltip="ctrl.target.errors.metric" class="gf-form-label"
+        style="color: rgb(229, 189, 28)"
+        ng-show="ctrl.target.errors.metric">
+        <i class="fa fa-warning"></i>
+      </a>
+      <label class="gf-form-label"> Alias </label>
+      <input type="text" class="gf-form-input" ng-model="ctrl.target.alias"
+      spellcheck='false' placeholder="alias" ng-blur="ctrl.targetBlur()">
+      <label class="gf-form-label">
         &nbsp;Peak filter
         <input class="input-medium" type="checkbox" ng-model="ctrl.target.exOuter" ng-change="ctrl.targetBlur()">
-      </li>
-	</ul>
-	<div class="clearfix"></div>
+      </label>
+    </div>
+    <div class="gf-form gf-form--grow"> 
+      <div class="gf-form-label gf-form-label--grow"/>
+    </div>
   </div>
 
   <!-- TAGS -->
-  <div class="tight-form">
-    <ul class="tight-form-list" role="menu">
-      <li class="tight-form-item">
-        Tags
-      </li>
-      <li ng-repeat="(key, value) in ctrl.target.tags track by $index" class="tight-form-item">
-        {{key}}&nbsp;=&nbsp;{{value}}
-        <a ng-click="ctrl.removeFilterTag(key)">
-          <i class="fa fa-remove"></i>
-        </a>
-      </li>
-
-      <li class="tight-form-item" ng-hide="ctrl.target.addFilterTagMode">
-        <a ng-click="ctrl.addFilterTag()">
+  <div class="gf-form-inline">
+    <div class="gf-form">
+      <label class="gf-form-label query-keyword width-9"> TAGS </label>
+      <div ng-repeat="(key, value) in ctrl.target.tags track by $index" class="gf-form-label query-part">
+          {{key}}&nbsp;=&nbsp;{{value}}
+          <a ng-click="ctrl.removeFilterTag(key)">
+            <i class="fa fa-remove"></i>
+          </a>
+      </div>
+  
+      <div class="gf-form-label" ng-hide="ctrl.target.addFilterTagMode">
+        <a ng-click="ctrl.addFilterTag()" class="">
           <i class="fa fa-plus"></i>
         </a>
-      </li>
-
-      <li ng-show="ctrl.target.addFilterTagMode">
+      </div>
+      <div class="gf-form" ng-show="ctrl.target.addFilterTagMode">
         <input type="text"
-        class="input-small tight-form-input"
+        class="input-small gf-form-input"
         spellcheck='false'
         bs-typeahead="ctrl.suggestTagKeys"
         ng-change="ctrl.validateFilterTag()"
         data-min-length=0 data-items=100
         ng-model="ctrl.target.currentTagKey"
         placeholder="key">
-      </li>
-      <li ng-show="ctrl.target.addFilterTagMode">
         <input type="text"
-        class="input-small tight-form-input"
+        class="input-small gf-form-input"
         spellcheck='false'
         bs-typeahead="ctrl.suggestTagValues"
         ng-change="ctrl.validateFilterTag()"
         data-min-length=0 data-items=100
         ng-model="ctrl.target.currentTagValue"
         placeholder="value">
-        <a bs-tooltip="target.errors.tags"
+        <a bs-tooltip="target.errors.tags" class="gf-form-label"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.tags">
           <i class="fa fa-warning"></i>
         </a>
-        <li class="tight-form-item" ng-show="ctrl.target.addFilterTagMode">
+        <div class="gf-form-label">
           <a ng-click="ctrl.addFilterTag()">
             <i ng-show="ctrl.target.errors.tags" class="fa fa-remove"></i>
             <i ng-hide="ctrl.target.errors.tags" class="fa fa-plus-circle"></i>
           </a>
-        </li>
-      </li>
-    </ul>
-    <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+    <div class="gf-form gf-form--grow"> 
+      <div class="gf-form-label gf-form-label--grow"/>
+    </div>
   </div>
 
   <!-- GROUP BY -->
-  <div class="tight-form">
-    <ul class="tight-form-list" role="menu">
-      <li class="tight-form-item">
-        Group By
-      </li>
+  <div class="gf-form-inline">
+    <div class="gf-form"> 
+      <label class="gf-form-label query-keyword width-9"> GROUP BY </label>
 
-      <li class="tight-form-item" ng-show="ctrl.target.groupByTags">
-        tags:
-      </li>
+      <div class="gf-form-label query-keyword" ng-show="ctrl.target.groupByTags"> Tags: </div>
 
-      <li ng-repeat="key in ctrl.target.groupByTags track by $index" class="tight-form-item">
+      <div ng-repeat="key in ctrl.target.groupByTags track by $index" class="gf-form-label">
         {{key}}
         <a ng-click="ctrl.removeGroupByTag($index)">
           <i class="fa fa-remove"></i>
         </a>
-      </li>
+      </div>
 
-      <li class="tight-form-item" ng-show="ctrl.target.groupByTags && ctrl.target.nonTagGroupBys">
-        and by:
-      </li>
+      <div class="gf-form-label query-keyword" ng-show="ctrl.target.groupByTags && ctrl.target.nonTagGroupBys"> And by: </div>
 
-      <li ng-repeat="groupByObject in ctrl.target.nonTagGroupBys track by $index" class="tight-form-item">
+      <div ng-repeat="groupByObject in ctrl.target.nonTagGroupBys track by $index" class="gf-form-label">
         {{ctrl.getValuesOfGroupBy(groupByObject)}}
         <a ng-click="ctrl.removeNonTagGroupBy($index)">
           <i class="fa fa-remove"></i>
         </a>
-      </li>
+      </div>
 
-      <li class="tight-form-item" ng-hide="ctrl.target.addGroupByMode">
+      <div class="gf-form-label" ng-hide="ctrl.target.addGroupByMode">
         <a ng-click="ctrl.addGroupBy()">
           <i class="fa fa-plus"></i>
         </a>
-      </li>
-      <li ng-show="ctrl.target.addGroupByMode">
-        <select class="input-small tight-form-input"
+      </div>
+      <div class="gf-form-select-wrapper" ng-show="ctrl.target.addGroupByMode">
+        <select class="input-small gf-form-input"
           ng-change="ctrl.changeGroupByInput()"
           ng-model="ctrl.target.currentGroupByType"
           ng-options="f for f in ['tag','value','time']"></select>
-      </li>
-      <li ng-show="ctrl.target.isTagGroupBy">
+      </div>
+      <div class="gf-form" ng-show="ctrl.target.isTagGroupBy">
         <input type="text"
-        class="input-small tight-form-input"
+        class="input-small gf-form-input"
         spellcheck='false'
         bs-typeahead="ctrl.suggestTagKeys"
         ng-change = "ctrl.validateGroupBy()"
         data-min-length=0 data-items=100
         ng-model="ctrl.target.groupBy.tagKey"
         placeholder="key">
-        <a bs-tooltip="ctrl.target.errors.groupBy.tagKey"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.tagKey"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.groupBy.tagKey">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
-      <li ng-show="ctrl.target.isValueGroupBy">
+      </div>
+      <div class="gf-form" ng-show="ctrl.target.isValueGroupBy">
         <input type="text"
-        class="input-mini tight-form-input"
+        class="input-mini gf-form-input"
         spellcheck='false'
         ng-model="ctrl.target.groupBy.valueRange"
         placeholder="range"
         bs-tooltip="'Range on which values are considered in the same group'"
         ng-change = "ctrl.validateGroupBy()" >
-        <a bs-tooltip="ctrl.target.errors.groupBy.valueRange"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.valueRange"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.groupBy.valueRange">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
-      <li ng-show="ctrl.target.isTimeGroupBy">
+      </div>
+      <div class="gf-form" ng-show="ctrl.target.isTimeGroupBy">
         <input type="text"
-        class="input-mini tight-form-input"
+        class="input-mini gf-form-input"
         ng-model="ctrl.target.groupBy.timeInterval"
         ng-init="ctrl.target.groupBy.timeInterval='1s'"
         placeholder="interval"
         bs-tooltip="'Duration of time groups'"
         spellcheck='false'
         ng-change="ctrl.validateGroupBy()">
-        <a bs-tooltip="ctrl.target.errors.groupBy.timeInterval"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.timeInterval"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.groupBy.timeInterval">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
-      <li ng-show="ctrl.target.isTimeGroupBy">
+      </div>
+      <div class="gf-form" ng-show="ctrl.target.isTimeGroupBy">
         <input type="text"
-        class="input-mini tight-form-input"
+        class="input-mini gf-form-input"
         ng-model="ctrl.target.groupBy.groupCount"
         placeholder="Count"
         bs-tooltip="'Number of time groups to be formed'"
         spellcheck='false'
         ng-change="ctrl.validateGroupBy()">
-        <a bs-tooltip="ctrl.target.errors.groupBy.groupCount"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.groupCount"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.groupBy.groupCount">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
-      <li class="tight-form-item" ng-show="ctrl.target.addGroupByMode">
+      </div>
+      <div class="gf-form-label" ng-show="ctrl.target.addGroupByMode">
         <a ng-click="ctrl.addGroupBy()">
           <i ng-hide="ctrl.target.isGroupByValid" class="fa fa-remove"></i>
           <i ng-show="ctrl.target.isGroupByValid" class="fa fa-plus-circle"></i>
         </a>
-      </li>
-    </ul>
-    <div class="clearfix"></div>
+      </div>
+    </div>
+    <div class="gf-form gf-form--grow"> 
+      <div class="gf-form-label gf-form-label--grow"/>
+    </div>
   </div>
 
   <!-- HORIZONTAL AGGREGATION -->
-  <div class="tight-form">
-    <ul class="tight-form-list" role="menu">
-      <li class="tight-form-item">
-        Aggregators
-      </li>
-      <li ng-repeat="aggregatorObject in ctrl.target.horizontalAggregators track by $index" class="tight-form-item">
+  <div class="gf-form-inline">
+    <div class="gf-form">
+      <label class="gf-form-label query-keyword width-9"> AGGREGATORS </label>
+      <div class="gf-form-label" ng-repeat="aggregatorObject in ctrl.target.horizontalAggregators track by $index">
         {{aggregatorObject.name}}&#40;
         <span ng-repeat="val in aggregatorObject">
             {{val != aggregatorObject.name ? val : ''}}
@@ -208,91 +195,93 @@
         <a ng-click="ctrl.removeHorizontalAggregator($index)">
           <i class="fa fa-remove"></i>
         </a>
-      </li>
+      </div>
 
-      <li class="tight-form-item" ng-hide="ctrl.target.addHorizontalAggregatorMode">
+      <div class="gf-form-label" ng-hide="ctrl.target.addHorizontalAggregatorMode">
         <a ng-click="ctrl.addHorizontalAggregator()">
           <i class="fa fa-plus"></i>
         </a>
-      </li>
+      </div>
 
-      <li ng-show="ctrl.target.addHorizontalAggregatorMode">
-        <select class="input-medium tight-form-input"
+      <div class="gf-form-select-wrapper" ng-show="ctrl.target.addHorizontalAggregatorMode">
+        <select class="input-medium gf-form-input"
           ng-change="ctrl.changeHorAggregationInput()"
           ng-model="ctrl.target.currentHorizontalAggregatorName"
           ng-options="f for f in ['avg','dev','max','min','rate','sampler','count','sum','least_squares','percentile','scale','div', 'first', 'gaps', 'last', 'diff']"></select>
-      </li>
+      </div>
 
       <!-- Different parameters -->
-      <li ng-show="ctrl.target.hasSamplingRate" class="tight-form-item">
+      <div ng-show="ctrl.target.hasSamplingRate" class="gf-form-label">
         every
-      </li>
-      <li ng-show="ctrl.target.hasSamplingRate">
+      </div>
+      <div ng-show="ctrl.target.hasSamplingRate">
         <input type="text"
-        class="input-mini tight-form-input"
+        class="input-mini gf-form-input"
         ng-model="ctrl.target.horAggregator.samplingRate"
         ng-init="ctrl.target.horAggregator.samplingRate='1s'"
         spellcheck='false'
         ng-change="ctrl.validateHorizontalAggregator()" >
-        <a bs-tooltip="ctrl.target.errors.horAggregator.samplingRate"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.horAggregator.samplingRate"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.horAggregator.samplingRate">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
+      </div>
 
-      <li ng-show="ctrl.target.hasUnit" class="tight-form-item">
+      <div ng-show="ctrl.target.hasUnit" class="gf-form-label">
         every
-      </li>
-      <li ng-show="ctrl.target.hasUnit">
-        <select class="input-medium tight-form-input"
+      </div>
+      <div class="gf-form-select-wrapper" ng-show="ctrl.target.hasUnit">
+        <select class="input-medium gf-form-input"
           ng-model="ctrl.target.horAggregator.unit"
           ng-init="ctrl.target.horAggregator.unit='millisecond'"
           ng-options="f for f in ['millisecond','second','minute','hour','day','week','month','year']"></select>
-      </li>
+      </div>
 
-      <li ng-show="ctrl.target.hasFactor" class="tight-form-item">
+      <div ng-show="ctrl.target.hasFactor" class="gf-form-label">
         by
-      </li>
-      <li ng-show="ctrl.target.hasFactor">
+      </div>
+      <div ng-show="ctrl.target.hasFactor">
         <input type="text"
-        class="input-mini tight-form-input"
+        class="input-mini gf-form-input"
         ng-model="ctrl.target.horAggregator.factor"
         ng-init="ctrl.target.horAggregator.factor='1'"
         spellcheck='false'
         ng-change="ctrl.validateHorizontalAggregator()" >
-        <a bs-tooltip="ctrl.target.errors.horAggregator.factor"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.horAggregator.factor"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.horAggregator.factor">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
+      </div>
 
-      <li ng-show="ctrl.target.hasPercentile" class="tight-form-item">
+      <div ng-show="ctrl.target.hasPercentile" class="gf-form-input">
         percentile
-      </li>
-      <li ng-show="ctrl.target.hasPercentile">
+      </div>
+      <div ng-show="ctrl.target.hasPercentile">
         <input type="text"
-        class="input-mini tight-form-input"
+        class="input-mini gf-form-input"
         ng-model="ctrl.target.horAggregator.percentile"
         ng-init="ctrl.target.horAggregator.percentile='0.75'"
         spellcheck='false'
         ng-change="ctrl.validateHorizontalAggregator()" >
-        <a bs-tooltip="ctrl.target.errors.horAggregator.percentile"
+        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.horAggregator.percentile"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.horAggregator.percentile">
           <i class="fa fa-warning"></i>
         </a>
-      </li>
+      </div>
 
-      <li class="tight-form-item" ng-show="ctrl.target.addHorizontalAggregatorMode">
+      <div class="gf-form-label" ng-show="ctrl.target.addHorizontalAggregatorMode">
         <a ng-click="ctrl.addHorizontalAggregator()">
           <i ng-hide="ctrl.target.isAggregatorValid" class="fa fa-remove"></i>
           <i ng-show="ctrl.target.isAggregatorValid" class="fa fa-plus-circle"></i>
         </a>
-      </li>
-    </ul>
-    <div class="clearfix"></div>
+      </div>
+    </div>
+    <div class="gf-form gf-form--grow"> 
+      <div class="gf-form-label gf-form-label--grow"/>
+    </div>
   </div>
 
 </query-editor-row>
