--- a/partials/query.editor.html
+++ b/partials/query.editor.html
@@ -1,8 +1,8 @@
 <query-editor-row query-ctrl="ctrl" can-collapse="false">
   <div class="gf-form-inline">
     <div class="gf-form">
-      <label class="gf-form-label query-keyword width-9"> METRIC </label>
-      <input type="text" class="gf-form-input"
+      <label class="gf-form-label query-keyword width-7"> Metric </label>
+      <input type="text" class="gf-form-input width-20"
         ng-model="ctrl.target.metric"
         spellcheck="false"
         bs-typeahead="ctrl.suggestMetrics"
@@ -14,6 +14,8 @@
         ng-show="ctrl.target.errors.metric">
         <i class="fa fa-warning"></i>
       </a>
+    </div>
+    <div class="gf-form">
       <label class="gf-form-label"> Alias </label>
       <input type="text" class="gf-form-input" ng-model="ctrl.target.alias"
       spellcheck='false' placeholder="alias" ng-blur="ctrl.targetBlur()">
@@ -30,47 +32,50 @@
   <!-- TAGS -->
   <div class="gf-form-inline">
     <div class="gf-form">
-      <label class="gf-form-label query-keyword width-9"> TAGS </label>
-      <div ng-repeat="(key, value) in ctrl.target.tags track by $index" class="gf-form-label query-part">
+      <label class="gf-form-label query-keyword width-7"> Tags </label>
+    </div>
+    <div class="gf-form" ng-repeat="(key, value) in ctrl.target.tags track by $index">
+      <div class="gf-form-label query-part">
           {{key}}&nbsp;=&nbsp;{{value}}
           <a ng-click="ctrl.removeFilterTag(key)">
             <i class="fa fa-remove"></i>
           </a>
       </div>
-  
+    </div>
+    <div class="gf-form">
       <div class="gf-form-label" ng-hide="ctrl.target.addFilterTagMode">
         <a ng-click="ctrl.addFilterTag()" class="">
           <i class="fa fa-plus"></i>
         </a>
       </div>
-      <div class="gf-form" ng-show="ctrl.target.addFilterTagMode">
-        <input type="text"
-        class="input-small gf-form-input"
+    </div>
+    <div class="gf-form" ng-show="ctrl.target.addFilterTagMode">
+      <input type="text"
+        class="gf-form-input width-10"
         spellcheck='false'
         bs-typeahead="ctrl.suggestTagKeys"
         ng-change="ctrl.validateFilterTag()"
         data-min-length=0 data-items=100
         ng-model="ctrl.target.currentTagKey"
         placeholder="key">
-        <input type="text"
-        class="input-small gf-form-input"
+      <input type="text"
+        class="gf-form-input width-13"
         spellcheck='false'
         bs-typeahead="ctrl.suggestTagValues"
         ng-change="ctrl.validateFilterTag()"
         data-min-length=0 data-items=100
         ng-model="ctrl.target.currentTagValue"
         placeholder="value">
-        <a bs-tooltip="target.errors.tags" class="gf-form-label"
+      <a bs-tooltip="target.errors.tags" class="gf-form-label"
           style="color: rgb(229, 189, 28)"
           ng-show="ctrl.target.errors.tags">
-          <i class="fa fa-warning"></i>
+        <i class="fa fa-warning"></i>
+      </a>
+      <div class="gf-form-label">
+        <a ng-click="ctrl.addFilterTag()">
+          <i ng-show="ctrl.target.errors.tags" class="fa fa-remove"></i>
+          <i ng-hide="ctrl.target.errors.tags" class="fa fa-plus-circle"></i>
         </a>
-        <div class="gf-form-label">
-          <a ng-click="ctrl.addFilterTag()">
-            <i ng-show="ctrl.target.errors.tags" class="fa fa-remove"></i>
-            <i ng-hide="ctrl.target.errors.tags" class="fa fa-plus-circle"></i>
-          </a>
-        </div>
       </div>
     </div>
     <div class="gf-form gf-form--grow"> 
@@ -80,103 +85,102 @@
 
   <!-- GROUP BY -->
   <div class="gf-form-inline">
-    <div class="gf-form"> 
-      <label class="gf-form-label query-keyword width-9"> GROUP BY </label>
-
+    <div class="gf-form">
+      <label class="gf-form-label query-keyword width-7"> Group by </label>
+    </div>
+    <div class="gf-form">
       <div class="gf-form-label query-keyword" ng-show="ctrl.target.groupByTags"> Tags: </div>
-
-      <div ng-repeat="key in ctrl.target.groupByTags track by $index" class="gf-form-label">
+      <div ng-repeat="key in ctrl.target.groupByTags track by $index" class="gf-form-label query-part">
         {{key}}
         <a ng-click="ctrl.removeGroupByTag($index)">
           <i class="fa fa-remove"></i>
         </a>
       </div>
-
+    </div>
+    <div class="gf-form">
       <div class="gf-form-label query-keyword" ng-show="ctrl.target.groupByTags && ctrl.target.nonTagGroupBys"> And by: </div>
-
-      <div ng-repeat="groupByObject in ctrl.target.nonTagGroupBys track by $index" class="gf-form-label">
+      <div ng-repeat="groupByObject in ctrl.target.nonTagGroupBys track by $index" class="gf-form-label query-part">
         {{ctrl.getValuesOfGroupBy(groupByObject)}}
         <a ng-click="ctrl.removeNonTagGroupBy($index)">
           <i class="fa fa-remove"></i>
         </a>
       </div>
-
+    </div>
+    <div class="gf-form">
       <div class="gf-form-label" ng-hide="ctrl.target.addGroupByMode">
         <a ng-click="ctrl.addGroupBy()">
           <i class="fa fa-plus"></i>
         </a>
       </div>
-      <div class="gf-form-select-wrapper" ng-show="ctrl.target.addGroupByMode">
-        <select class="input-small gf-form-input"
+    </div>
+    <div class="gf-form">
+      <div class="gf-form-select-wrapper width-8" ng-show="ctrl.target.addGroupByMode">
+        <select class="gf-form-input"
           ng-change="ctrl.changeGroupByInput()"
           ng-model="ctrl.target.currentGroupByType"
           ng-options="f for f in ['tag','value','time']"></select>
       </div>
-      <div class="gf-form" ng-show="ctrl.target.isTagGroupBy">
-        <input type="text"
-        class="input-small gf-form-input"
-        spellcheck='false'
-        bs-typeahead="ctrl.suggestTagKeys"
-        ng-change = "ctrl.validateGroupBy()"
-        data-min-length=0 data-items=100
-        ng-model="ctrl.target.groupBy.tagKey"
-        placeholder="key">
-        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.tagKey"
-          style="color: rgb(229, 189, 28)"
-          ng-show="ctrl.target.errors.groupBy.tagKey">
-          <i class="fa fa-warning"></i>
-        </a>
-      </div>
-      <div class="gf-form" ng-show="ctrl.target.isValueGroupBy">
-        <input type="text"
-        class="input-mini gf-form-input"
-        spellcheck='false'
-        ng-model="ctrl.target.groupBy.valueRange"
-        placeholder="range"
-        bs-tooltip="'Range on which values are considered in the same group'"
-        ng-change = "ctrl.validateGroupBy()" >
-        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.valueRange"
-          style="color: rgb(229, 189, 28)"
-          ng-show="ctrl.target.errors.groupBy.valueRange">
-          <i class="fa fa-warning"></i>
-        </a>
-      </div>
-      <div class="gf-form" ng-show="ctrl.target.isTimeGroupBy">
-        <input type="text"
-        class="input-mini gf-form-input"
-        ng-model="ctrl.target.groupBy.timeInterval"
-        ng-init="ctrl.target.groupBy.timeInterval='1s'"
-        placeholder="interval"
-        bs-tooltip="'Duration of time groups'"
-        spellcheck='false'
-        ng-change="ctrl.validateGroupBy()">
-        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.timeInterval"
-          style="color: rgb(229, 189, 28)"
-          ng-show="ctrl.target.errors.groupBy.timeInterval">
-          <i class="fa fa-warning"></i>
-        </a>
-      </div>
-      <div class="gf-form" ng-show="ctrl.target.isTimeGroupBy">
-        <input type="text"
-        class="input-mini gf-form-input"
-        ng-model="ctrl.target.groupBy.groupCount"
-        placeholder="Count"
-        bs-tooltip="'Number of time groups to be formed'"
-        spellcheck='false'
-        ng-change="ctrl.validateGroupBy()">
-        <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.groupCount"
-          style="color: rgb(229, 189, 28)"
-          ng-show="ctrl.target.errors.groupBy.groupCount">
-          <i class="fa fa-warning"></i>
-        </a>
-      </div>
+      <input type="text"
+      class="gf-form-input width-10"
+      spellcheck='false'
+      bs-typeahead="ctrl.suggestTagKeys"
+      ng-change = "ctrl.validateGroupBy()"
+      data-min-length=0 data-items=100
+      ng-model="ctrl.target.groupBy.tagKey"
+      ng-show="ctrl.target.isTagGroupBy"
+      placeholder="key">
+      <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.tagKey"
+        style="color: rgb(229, 189, 28)"
+        ng-show="ctrl.target.isTagGroupBy && ctrl.target.errors.groupBy.tagKey">
+        <i class="fa fa-warning"></i>
+      </a>
+      <input type="text"
+      class="gf-form-input width-6"
+      spellcheck='false'
+      ng-model="ctrl.target.groupBy.valueRange"
+      placeholder="range"
+      bs-tooltip="'Range on which values are considered in the same group'"
+      ng-show="ctrl.target.isValueGroupBy"
+      ng-change = "ctrl.validateGroupBy()" >
+      <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.valueRange"
+        style="color: rgb(229, 189, 28)"
+        ng-show="ctrl.target.isValueGroupBy && ctrl.target.errors.groupBy.valueRange">
+        <i class="fa fa-warning"></i>
+      </a>
+      <input type="text"
+      class="gf-form-input width-4"
+      ng-model="ctrl.target.groupBy.timeInterval"
+      ng-init="ctrl.target.groupBy.timeInterval='1s'"
+      placeholder="interval"
+      bs-tooltip="'Duration of time groups'"
+      spellcheck='false'
+      ng-show="ctrl.target.isTimeGroupBy"
+      ng-change="ctrl.validateGroupBy()">
+      <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.timeInterval"
+        style="color: rgb(229, 189, 28)"
+        ng-show="ctrl.target.isTimeGroupBy && ctrl.target.errors.groupBy.timeInterval">
+        <i class="fa fa-warning"></i>
+      </a>
+      <input type="text"
+      class="gf-form-input width-4"
+      ng-model="ctrl.target.groupBy.groupCount"
+      placeholder="Count"
+      bs-tooltip="'Number of time groups to be formed'"
+      spellcheck='false'
+      ng-show="ctrl.target.isTimeGroupBy"
+      ng-change="ctrl.validateGroupBy()">
+      <a class="gf-form-label" bs-tooltip="ctrl.target.errors.groupBy.groupCount"
+        style="color: rgb(229, 189, 28)"
+        ng-show="ctrl.target.isTimeGroupBy && ctrl.target.errors.groupBy.groupCount">
+        <i class="fa fa-warning"></i>
+      </a>
       <div class="gf-form-label" ng-show="ctrl.target.addGroupByMode">
         <a ng-click="ctrl.addGroupBy()">
           <i ng-hide="ctrl.target.isGroupByValid" class="fa fa-remove"></i>
           <i ng-show="ctrl.target.isGroupByValid" class="fa fa-plus-circle"></i>
         </a>
       </div>
-    </div>
+    </div>  
     <div class="gf-form gf-form--grow"> 
       <div class="gf-form-label gf-form-label--grow"/>
     </div>
@@ -185,8 +189,10 @@
   <!-- HORIZONTAL AGGREGATION -->
   <div class="gf-form-inline">
     <div class="gf-form">
-      <label class="gf-form-label query-keyword width-9"> AGGREGATORS </label>
-      <div class="gf-form-label" ng-repeat="aggregatorObject in ctrl.target.horizontalAggregators track by $index">
+      <label class="gf-form-label query-keyword width-7"> Aggregators </label>
+    </div>
+    <div class="gf-form">
+      <div class="gf-form-label query-part" ng-repeat="aggregatorObject in ctrl.target.horizontalAggregators track by $index">
         {{aggregatorObject.name}}&#40;
         <span ng-repeat="val in aggregatorObject">
             {{val != aggregatorObject.name ? val : ''}}
@@ -202,9 +208,10 @@
           <i class="fa fa-plus"></i>
         </a>
       </div>
-
+    </div>
+    <div class="gf-form">
       <div class="gf-form-select-wrapper" ng-show="ctrl.target.addHorizontalAggregatorMode">
-        <select class="input-medium gf-form-input"
+        <select class="gf-form-input width-10"
           ng-change="ctrl.changeHorAggregationInput()"
           ng-model="ctrl.target.currentHorizontalAggregatorName"
           ng-options="f for f in ['avg','dev','max','min','rate','sampler','count','sum','least_squares','percentile','scale','div', 'first', 'gaps', 'last', 'diff']"></select>
@@ -216,7 +223,7 @@
       </div>
       <div ng-show="ctrl.target.hasSamplingRate">
         <input type="text"
-        class="input-mini gf-form-input"
+        class="gf-form-input width-5"
         ng-model="ctrl.target.horAggregator.samplingRate"
         ng-init="ctrl.target.horAggregator.samplingRate='1s'"
         spellcheck='false'
@@ -232,7 +239,7 @@
         every
       </div>
       <div class="gf-form-select-wrapper" ng-show="ctrl.target.hasUnit">
-        <select class="input-medium gf-form-input"
+        <select class="gf-form-input width-9"
           ng-model="ctrl.target.horAggregator.unit"
           ng-init="ctrl.target.horAggregator.unit='millisecond'"
           ng-options="f for f in ['millisecond','second','minute','hour','day','week','month','year']"></select>
@@ -243,7 +250,7 @@
       </div>
       <div ng-show="ctrl.target.hasFactor">
         <input type="text"
-        class="input-mini gf-form-input"
+        class="gf-form-input width-4"
         ng-model="ctrl.target.horAggregator.factor"
         ng-init="ctrl.target.horAggregator.factor='1'"
         spellcheck='false'
@@ -255,12 +262,12 @@
         </a>
       </div>
 
-      <div ng-show="ctrl.target.hasPercentile" class="gf-form-input">
+      <div ng-show="ctrl.target.hasPercentile" class="gf-form-label">
         percentile
       </div>
       <div ng-show="ctrl.target.hasPercentile">
         <input type="text"
-        class="input-mini gf-form-input"
+        class="gf-form-input width-4"
         ng-model="ctrl.target.horAggregator.percentile"
         ng-init="ctrl.target.horAggregator.percentile='0.75'"
         spellcheck='false'
